--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <title>Document</title>
     <style>
       .inputBox {
-        background-color: orange;
+        background-color: steelblue;
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 5px;
         font-size: 1.5rem;
+        color: white;
       }
       .checkBtn {
         padding: 1rem 1.5rem 1rem 1.5rem;
         margin-top: 1rem;
-        background-color: steelblue;
+        background-color: rgba(255, 68, 0, 0.555);
         border: none;
         border-radius: 1rem;
         font-size: 1.5rem;
@@ -27,6 +28,11 @@
       .checkBtn:hover {
         color: black;
         background-color: rgba(70, 131, 180, 0.466);
+      }
+
+      .resultPart {
+        display: flex;
+        justify-content: center;
       }
     </style>
   </head>
@@ -50,8 +56,6 @@
     </div>
     <div
       style="
-        display: flex;
-        justify-content: center;
         background-color: steelblue;
         width: 75%;
         margin: auto;
@@ -59,10 +63,14 @@
         border-radius: 1rem;
       "
     >
-      <h3 style="font-size: 1.5rem; color: white">
-        Result will be print here:
-      </h3>
-      <div></div>
+      <div style="display: flex; padding: 1rem; justify-content: center">
+        <h1 style="font-size: 1.5rem; font-weight: 900; color: white">
+          Result will be print here:
+        </h1>
+      </div>
+      <div id="resultArea" style="display: flex;justify-content: center; font-size: 1rem; font-weight: bold; color: ghostwhite;">
+        <!-- Result will be print here -->
+      </div>
     </div>
     <script src="checkComment.js"></script>
   </body>
