flex column in result

--- a/index.html
+++ b/index.html
@@ -68,7 +68,18 @@
           Result will be print here:
         </h1>
       </div>
-      <div id="resultArea" style="display: flex;justify-content: center; font-size: 1rem; font-weight: bold; color: ghostwhite;">
+      <div
+        id="resultArea"
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          font-size: 1rem;
+          font-weight: bold;
+          color: ghostwhite;
+        "
+      >
         <!-- Result will be print here -->
       </div>
     </div>
